methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:6: error: not found: value vuBiscuit
      vuBiscuit=true
      ^MethodsReturning:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (compteur <-1 to 6) {
                ^