methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBisctuit: Boolean=false
  for (compteur <-1 to 6) {
    forward();
    if (estSurBiscuit) {
      vuBiscuit=true
    }
    }
  for (compteur <-1 to 6) {
    backward();
  }
}

